--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   equatable: ^2.0.5
   json_annotation: ^4.8.1
+  dynamic_color: ^1.7.0
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +71,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/logo.png
+    - assets/questions/topics.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
