--- a/make/Makefile
+++ b/make/Makefile
@@ -19,7 +19,11 @@ deploy:
 	git commit -m "$(M)" && \
 	git branch -M main && \
 	git remote add origin $(GITHUB_REPO) && \
-	git push -u -f origin main
+	git push -u -f origin main && \
+	cd ../.. && \
+	git add . && \
+	git commit -m "$(M)" && \
+	git push
 
 	@echo "✅ Finished deploy: $(GITHUB_REPO)"
 	@echo "🚀 Flutter web URL: https://$(GITHUB_USER).github.io/"
