--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  auto_route: ^8.0.3
+  flutter_web_plugins:
+    sdk: flutter
+  auto_route: ^8.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,6 +44,7 @@ dependencies:
   equatable: ^2.0.5
   json_annotation: ^4.8.1
   dynamic_color: ^1.7.0
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
