--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,39 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"testing-training-e498b","appId":"1:937555690164:android:a9311b378d3e8d03488de1","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"testing-training-e498b","configurations":{"android":"1:937555690164:android:a9311b378d3e8d03488de1","ios":"1:937555690164:ios:909afdad25d7bad2488de1","macos":"1:937555690164:ios:909afdad25d7bad2488de1","web":"1:937555690164:web:56643468e5074095488de1","windows":"1:937555690164:web:a38f3f69b0cb03f3488de1"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "testing-training-e498b",
+          "appId": "1:937555690164:android:a9311b378d3e8d03488de1",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "testing-training-e498b",
+          "configurations": {
+            "android": "1:937555690164:android:a9311b378d3e8d03488de1",
+            "ios": "1:937555690164:ios:909afdad25d7bad2488de1",
+            "macos": "1:937555690164:ios:909afdad25d7bad2488de1",
+            "web": "1:937555690164:web:56643468e5074095488de1",
+            "windows": "1:937555690164:web:a38f3f69b0cb03f3488de1"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
