Firebase attempt new 2

--- a/make/Makefile
+++ b/make/Makefile
@@ -18,18 +18,18 @@ deploy:
 	flutter pub get && \
 	flutter create . --platform web && \
 	flutter build web && \
-	python make/copy_dirs.py && \
-	cd build/web && \
-	git init && \
-	git add . && \
-	git commit -m "$(M)" && \
-	git branch -M main && \
-	git remote add origin $(GITHUB_REPO) && \
-	git push -u -f origin main && \
-	cd ../.. && \
-	git add . && \
-	git commit -m "$(M)" && \
-	git push
+#	python make/copy_dirs.py && \
+#	cd build/web && \
+#	git init && \
+#	git add . && \
+#	git commit -m "$(M)" && \
+#	git branch -M main && \
+#	git remote add origin $(GITHUB_REPO) && \
+#	git push -u -f origin main && \
+#	cd ../.. && \
+#	git add . && \
+#	git commit -m "$(M)" && \
+#	git push
 
 	@echo "Finished deploy: $(GITHUB_REPO)"
 	@echo "Flutter web URL: https://$(GITHUB_USER).github.io/"
