--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,7 @@ jobs:
           channel: 'stable'
       - run: flutter pub get
       - run: flutter build web
-      - run: cp -r assets build/web/assets
+#      - run: cp -r assets build/web/assets
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
