--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   firebase_analytics: ^10.10.3
   firebase_performance: ^0.9.4+3
   firebase_remote_config: ^4.4.3
+  firebase_storage: ^11.7.4
+  firebase_auth: ^4.19.4
+  firebase_app_check: ^0.2.2+4
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
