--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cached_network_image: ^3.3.1
   internet_connection_checker: ^1.0.0+1
   flutter_native_splash: ^2.4.0
+  version: ^3.0.2
 
 dev_dependencies:
   flutter_test:
