--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   flutter_native_splash: ^2.4.0
   version: ^3.0.2
+  insta_image_viewer: ^1.0.4
 
 dev_dependencies:
   flutter_test:
