--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   version: ^3.0.2
   insta_image_viewer: ^1.0.4
-  animated_digit: ^3.2.3
+  animated_flip_counter: ^0.3.4
 
 dev_dependencies:
   flutter_test:
