--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   insta_image_viewer: ^1.0.4
   animated_flip_counter: ^0.3.4
   syncfusion_flutter_charts: ^25.2.5
+  flutter_colorpicker: ^1.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
