--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   provider: ^6.1.2
   url_launcher: ^6.2.6
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
@@ -98,6 +99,7 @@ flutter:
     - assets/images/logo_shadow_more_background.png
     - assets/images/github_logo_light.png
     - assets/images/vk_icon.png
+    - assets/images/angry_grib.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
