--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   dynamic_color: ^1.7.0
   hive: ^2.2.3
   firebase_core: ^2.30.1
-  firebase_analytics: ^10.10.3
+  firebase_analytics: ^10.10.6
   firebase_performance: ^0.9.4+3
   firebase_remote_config: ^4.4.3
   firebase_storage: ^11.7.4
@@ -63,6 +63,7 @@ dependencies:
   provider: ^6.1.2
   url_launcher: ^6.2.6
   collection: ^1.18.0
+  firebase_crashlytics: ^3.5.6
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +101,7 @@ flutter:
     - assets/images/github_logo_light.png
     - assets/images/vk_icon.png
     - assets/images/angry_grib.png
+    - assets/images/grib_with_knife.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
