--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: testing_training
-description: "Flutter app for testing training."
+description: "Приложение для подготовки к ЦТ"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.1
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -64,6 +64,7 @@ dependencies:
   url_launcher: ^6.2.6
   collection: ^1.18.0
   firebase_crashlytics: ^3.5.6
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
